[tool.poetry]
name = "commune"
version = "0.0.1"
description = "Gobal toolbox that allows you to connect and share any tool (module)"
authors = ["commune ai organization <contact@communeai.org>"]
license = "MITehe"
readme = "README.md"
packages = [{ include = "commune"}]
repository = "https://github.com/commune-ai/commune"
homepage = "https://communeai.org/"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "*"
sse-starlette = "*"
paramiko = "*"
nest_asyncio = "*"
uvicorn = "*"
scalecodec = ">=1.2.10,<1.3"
asyncio = "*"
aiofiles = "*"
aiohttp = "*"
pytest = "*"
openai = "*"
torch = "*"
safetensors = "*"
msgpack_numpy = "*"
munch = "*"
retry = "*"
netaddr = "*"
typer = "*"
loguru = "*"
pyyaml = "*"
pandas = "*"
python-dotenv = "*"
websocket-client = ">=0.57.0"
base58 = ">=1.0.3"
certifi = ">=2019.3.9"
idna = ">=2.1.0"
requests = ">=2.21.0"
xxhash = ">=1.3.0"
ecdsa = ">=0.17.0"
eth-keys = ">=0.2.1"

eth_utils = ">=1.3.0"
pycryptodome = ">=3.11.0"
PyNaCl = ">=1.0.1"
py-sr25519-bindings = ">=0.2.0"
py-ed25519-zebra-bindings = ">=1.0"
py-bip39-bindings = ">=0.1.9"
twine = "*"
psutil = "*"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
mypy = "^1.8.0"
flake8 = "^7.0.0"
isort = "^5.13.2"
pytest-cov = "^4.1.0"

[tool.poetry.scripts]
c = "commune:main"

[tool.mypy]
files = ["commune"]

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'

[tool.flake8]
max-line-length = 88
extend-ignore = "E203"
exclude = [".git", "__pycache__", "build", "dist"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"