[project]
name = "commune"
dynamic = ["version"]
description = "Global toolbox that allows you to connect and share any tool (module)"
license = "MIT"
readme = "README.md"
requires-python = ">= 3.8, < 3.13"
dependencies = [
    "fastapi>=0.115.13",
    "sse-starlette>=2.3.6",
    "paramiko>=3.5.1",
    "nest_asyncio>=1.6.0",
    "uvicorn>=0.34.3",
    "scalecodec>=1.2.10,<1.3",
    "aiofiles>=24.1.0",
    "aiohttp>=3.12.13",
    "openai>=1.91.0",
    "torch>=2.7.1",
    "safetensors>=0.5.3",
    "msgpack_numpy>=0.4.8",
    "munch>=4.0.0",
    "netaddr>=1.3.0",
    "loguru>=0.7.3",
    "pyyaml>=6.0.2",
    "pandas>=2.3.0",
    "python-dotenv",
    "websocket-client>=0.57.0",
    "base58>=1.0.3",
    "certifi>=2019.3.9",
    "idna>=2.1.0",
    "requests>=2.21.0",
    "xxhash>=1.3.0",
    "ecdsa>=0.17.0",
    "eth-keys>=0.2.1",
    "eth_utils>=1.3.0",
    "pycryptodome>=3.11.0",
    "PyNaCl>=1.0.1",
    "py-sr25519-bindings>=0.2.0",
    "py-ed25519-zebra-bindings>=1.0",
    "py-bip39-bindings>=0.1.9",
    "psutil>=7.0.0"
]
keywords = ["modular", "sdk", "machine learning", "deep-learning", "crypto"]
classifiers = [
    "Development Status :: 4 - Beta",
    # Indicate who your project is intended for
    "Intended Audience :: Developers",
    # Specify the Python versions you support here (removed 3.7 to match requires-python)
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[[project.authors]]
name = "developers"
email = "dev@communeai.org"

[[project.maintainers]]
name = "Luca Vivona"
email = "lucavivona01@gmail.com"

[[project.maintainers]]
name = "Sal Vivona"
email = "vivonasg@gmail.com"

[project.urls]
Homepage = "https://communeai.org/"
Repository = "https://github.com/commune-ai/commune"
Issues = "https://github.com/commune-ai/commune/issues"

[project.optional-dependencies]
all = [
    "commune[quality]",
    "commune[testing]",
]
quality = [
    "black==22.3",  # Compatible with Python 3.8+
    "click==8.0.4",
    "isort>=5.5.4",
    "flake8>=3.8.3"
]
testing = [
    "setuptools_rust>=1.5.2",
    "pytest>=7.2.0",
    "pytest-benchmark>=4.0.0",
    "pytest-cov",
]

[project.scripts]
c = "commune:main"

[tool.setuptools.dynamic]
version = {attr = "commune.__version__"} 


[tool.mypy]
files = ["commune"]

[tool.black]
line-length = 80
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'

[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"