[package]
name = "process_executor"
version = "0.1.0"
edition = "2021"
keywords = ["parallel", "thread", "concurrency", "join", "performance"]
categories = ["concurrency"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "process_executor"
crate-type = ["cdylib"]

[dependencies]
futures = "^0.1.14"
futures-cpupool = "^0.1.5"
log = "^0.3.0"
tokio-core = "^0.1.6"
crossbeam-deque = "0.8.1"
crossbeam-utils = "0.8.0"
rayon = "1.8"
wasm_sync = { version = "0.1.0", optional = true }
pyo3 = { version = "0.20.3", features = ["extension-module"] }

[dev-dependencies]
rand = "^0.3"