[project]
name = "mod-net-client"
version = "0.1.0"
description = "Python client for the Mod-Net module registry"
requires-python = ">=3.11"
authors = [
    {name = "Mod-Net Team"}
]
dependencies = [
    "substrate-interface>=1.7.0",
    "ipfshttpclient>=0.8.0a2",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.4.0",
    "pyyaml>=6.0.2",
    "setuptools>=80.9.0",
    "aiohttp>=3.12.15",
    "websockets>=15.0.1",
    "pre-commit>=4.2.0",
    "ruff>=0.12.7",
    "mypy>=1.17.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "--asyncio-mode=auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "black>=25.1.0",
    "flake8>=7.3.0",
    "isort>=6.0.1",
    "mypy>=1.17.0",
    "pylint>=3.3.7",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.2.1",
]

[tool.black]
line-length = 88
target-version = ["py311"]
include = '(test_hooks\.py)$'
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | target
    | commune-ipfs
    | scripts
  )/
)
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
skip_glob = [
    "target/*",
    ".venv/*",
    "venv/*",
    "build/*",
    "dist/*",
    "*.egg-info/*",
    "**/site-packages/*",
    "**/.venv/*",
    "**/venv/*",
    "scripts/*"
]
skip_gitignore = true

[tool.ruff]
line-length = 88
target-version = "py311"
exclude = [
    "target",
    ".venv",
    "venv",
    "build",
    "dist",
    "*.egg-info",
    ".git",
    "__pycache__",
    "scripts",
]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "B",  # flake8-bugbear
    "I",  # isort
    "C",  # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long
    "C901",  # function too complex (we'll handle this separately)
]

[tool.pylint.messages_control]
disable = [
    "C0114",  # missing-module-docstring
    "C0115",  # missing-class-docstring
    "C0116",  # missing-function-docstring
    "R0903",  # too-few-public-methods
    "R0913",  # too-many-arguments
    "W0613",  # unused-argument
    "C0103",  # invalid-name
]

[tool.pylint.format]
max-line-length = 88

[tool.pylint.basic]
good-names = ["i", "j", "k", "ex", "Run", "_", "id", "db", "app"]

[tool.mypy]
python_version = "3.11"
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
strict_optional = true
ignore_missing_imports = true
show_error_codes = true
exclude = [
    "target",
    ".venv",
    "venv",
    "build",
    "dist",
    ".git",
    "__pycache__",
    "commune-ipfs",
    "scripts",
]

[tool.uv.workspace]
members = [
    "modules/test_module",
]
