[package]
name = "substrate-subxt-package"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "substrate_subxt_module"
crate-type = ["cdylib"]

[dependencies]
tokio = { version = "1.0", features = ["full"] }
async-std = "1.10.0"
pyo3 = { version = "0.14", features = ["extension-module"] }
rand = "0.8"
ssh2 = "0.9.0"
once_cell = "1.8.0"
console = "0.10.0"
anyhow = "1.0"
async-trait = "0.1"
clap = "3.0"
log = "0.4"
termion = "1.5"
russh = "0.43.0-beta.1"