[package]
name = "multiply"
version = "0.1.0"
edition = "2018"

[lib]
name = "rust"
# "cdylib" is necessary to produce a shared library for Python to import from.
#
# Downstream Rust code (including code in `bin/`, `examples/`, and `tests/`) will not be able
# to `use string_sum;` unless the "rlib" or "lib" crate type is also included, e.g.:
# crate-type = ["cdylib", "rlib"]
crate-type = ["cdylib"]

[dependencies]
reqwest = "0.11.24"
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
pyo3 = { version = "0.15", features = ["extension-module"] }

